--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
+	<script type="text/javascript" src="js/libs/angular-1-5-6.min.js"></script>
 	<title>Codecademy AngularJS</title>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </head>
 <body ng-app="myApp">
 	<div class="main" ng-controller="MainController">
