--- a/directives-1.html
+++ b/directives-1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+	<script type="text/javascript" src="js/libs/angular-1-5-6.min.js"></script>
 	<title>Codecademy AngularJS</title>
 </head>
 <body ng-app="myApp">
