--- a/holacracy-companies.html
+++ b/holacracy-companies.html
@@ -1,6 +1,7 @@
 <html ng-app="holacracyLister">
 <head>
-	<script src="js/libs/angular-1-5-6.min.js"></script>	
+	<script src="js/libs/angular-1-5-6.min.js"></script>
+	<link rel="stylesheet" href="css/style.css">	
 	<title>Holacracy-run Companies</title>
 </head>
 <body ng-controller="HolacracyController as holacracy">
@@ -8,8 +9,67 @@
 		<a ng-href="{{ company.url }}">
 			<h1>{{ company.name }}</h1>
 		</a>
-		<h3>{{ company.place }}</h3>
+		<h3>{{ company.place }} <span ng-show="company.running">(A current, running company!)</span></h3>
+		<section ng-controller="PanelController as panel">
+			<ul>
+				<li ng-class="{ active: panel.isSelected(1) }">
+					<a href="" ng-click="panel.selectTab(1)">Description</a>
+				</li>
+				<li ng-class="{ active: panel.isSelected(2) }">
+					<a href="" ng-click="panel.selectTab(2)">Specs</a>
+				</li>
+				<li ng-class="{ active: panel.isSelected(3) }">
+					<a href="" ng-click="panel.selectTab(3)">Reviews</a>
+				</li>
+			</ul>
+			<div class="panel" ng-show="panel.isSelected(1)">
+				<h4>Company URL</h4>
+				<p>{{company.url}}</p>
+			</div>
+			<div class="panel" ng-show="panel.isSelected(2)">
+				<h4>Specs</h4>
+				<blockquote>None yet</blockquote>
+			</div>
+			<div class="panel" ng-show="panel.isSelected(3)">
+				<h4>Reviews</h4>
+				<blockquote ng-repeat="review in company.reviews">
+					<b>Stars: {{ review.stars }}</b>
+					<p>{{ review.body }}</p>
+					<cite>by: {{review.author}}</cite>
+				</blockquote>
+				<h3>Submit a review</h3>
+            	<form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(company)">
+					<b>Stars: {{ reviewCtrl.review.stars }}</b>
+					<p>{{ reviewCtrl.review.body }}</p>
+					<cite>{{reviewCtrl.review.author}}</cite>
+					<select ng-model="reviewCtrl.review.stars">
+						<option value="1">1 star</option>
+						<option value="2">2 star</option>
+						<option value="3">3 star</option>
+					</select>
+					<textarea name="" id="" ng-model="reviewCtrl.review.body"></textarea>
+					<label for="">by:</label>
+					<input type="email" ng-model="reviewCtrl.review.author" />
+					<input type="submit" value="Submit" />
+				</form>
+			</div>
+		</section>
 	</div>
 	<script src="js/app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
